# posixipc-cpp

./: CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Makefile  README.md  vcpkg.json
bench/: CMakeLists.txt  bm_PubSub.cpp  bm_SPSCQueue.cpp  bm_spsc_direct.cpp  bm_spsc_threads.cpp  bm_thread_sync.cpp  utils.hpp
examples/: CMakeLists.txt  SPSC.cpp  atomic_client_server.cpp  condvar_client_server.cpp  condvar_test.cpp  mpmc.cpp  mpmc.hpp
examples/pubsub_client/: CMakeLists.txt  main.cpp
examples/pubsub_server/: CMakeLists.txt  main.cpp
examples/pubsub_server/subscribers/: pubsub_test_1.cfg  pubsub_test_2.cfg_
include/posix_ipc/: SharedMemory.hpp  errors.hpp  rdtsc.hpp  synchro.hpp  synchronization.hpp  threads.hpp
include/posix_ipc/queues/: Message.hpp
include/posix_ipc/queues/pubsub/: PubSub.hpp  PubSubConfig.hpp  Publisher.hpp  Subscriber.hpp  SubscriberConfig.hpp  enums.hpp
include/posix_ipc/queues/spsc/: SPSCQueue.hpp  SPSCQueueStatic.hpp_  SPSCStorage.hpp
scratch/: CMakeLists.txt  scratch.cpp
tests/: CMakeLists.txt  PosixIpcError.cpp  SPSC.cpp
